--- a/css/style.css
+++ b/css/style.css
@@ -84,15 +84,13 @@ li.menu-list {
   background-color: var(--accent-color);
 }
 
-/* .menu-list::before {
-  right: 50px;
-} */
 .contact {
   margin-left: 243px;
 }
 
-.icon-contact:hover,
-.icon-contact:focus {
+.menu-list:hover .contact-item,
+.menu-list:hover .icon-contact {
+  color: var(--accent-color);
   fill: var(--accent-color);
 }
 
@@ -121,18 +119,27 @@ li.menu-list {
   position: relative;
   width: 370px;
   height: 294px;
+  overflow: hidden;
 }
 .box-hover {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
+  transform: translateY(100%);
 }
-.box-hover:hover {
+.content-list:hover .box-hover {
   background-color: var(--accent-color);
   opacity: 1;
+  transform: translateY(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.content-list:hover .title-box {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.title-box {
+  width: 370px;
 }
 .text-hover {
   padding: 63px 24px;
